# ZScript-CSharp

./: Interpreter.cs  ZScript-CSharp.csproj  ZScript-CSharp.sln
ZScript-C/: .gitignore  CMakeLists.txt  Interpreter.c  Interpreter.h  ZScript-C.vcxproj
ZScript-C/include/shared/: Hello.h
ZScript-C/src/: Hello.c
ZScript-CSharp/: Interpreter.cs  ZScript-CSharp.csproj  ZScript-CSharp.sln
